kubernetes: notification using kube-prometheus-stack

--- a/helm-values/kube-prometheus-stack.yaml
+++ b/helm-values/kube-prometheus-stack.yaml
@@ -1,11 +1,11 @@
 alertmanager:
   config:
     global:
-      slack_api_url: ${SLACK_INCOMING_WEBHOOK_URL}
+      slack_api_url: "${SLACK_INCOMING_WEBHOOK_URL}"
       smtp_smarthost: "${SMTP_HOSTNAME}:${SMTP_HOSTPORT}"
       smtp_auth_username: "${SMTP_USERNAME}"
       smtp_auth_password: "${SMTP_PASSWORD}"
-      smtp_require_tls: ${SMTP_REQUIRE_TLS}
+      smtp_require_tls: "${SMTP_REQUIRE_TLS}"
       smtp_from: "${SMTP_FROM}"
     route:
       receiver: slack-notifications
@@ -22,12 +22,13 @@ alertmanager:
       - name: "email-notifications"
         email_configs:
           - to: "${EMAIL_ADDRESS}"
+            send_resolved: true
       - name: "slack-notifications"
         slack_configs:
           - channel: "#${SLACK_CHANNEL}"
-            send_resolved: True
+            send_resolved: true
   alertmanagerSpec:
-    logLevel: ${LOG_LEVEL}
+    logLevel: "${LOG_LEVEL}"
     storage:
       volumeClaimTemplate:
         spec:
@@ -36,7 +37,7 @@ alertmanager:
             requests:
               storage: 2Gi
 grafana:
-  logLevel: ${LOG_LEVEL}
+  logLevel: "${LOG_LEVEL}"
   smtp:
     enabled: true
     host: "${SMTP_HOSTNAME}:${SMTP_HOSTPORT}"
@@ -48,10 +49,10 @@ grafana:
     accessModes: ["ReadWriteOnce"]
     size: 2Gi
 prometheusOperator:
-  logLevel: ${LOG_LEVEL}
+  logLevel: "${LOG_LEVEL}"
 prometheus:
   prometheusSpec:
-    logLevel: ${LOG_LEVEL}
+    logLevel: "${LOG_LEVEL}"
     storageSpec:
       volumeClaimTemplate:
         spec:
