kubernetes: notification using kube-prometheus-stack

--- a/helm-values/kube-prometheus-stack.yaml
+++ b/helm-values/kube-prometheus-stack.yaml
@@ -25,7 +25,7 @@ alertmanager:
             send_resolved: true
       - name: "slack-notifications"
         slack_configs:
-          - channel: "#${SLACK_CHANNEL}"
+          - channel: '#\"${SLACK_CHANNEL}\"'
             send_resolved: true
   alertmanagerSpec:
     logLevel: "${LOG_LEVEL}"
