--- a/helm-values/kube-prometheus-stack.yaml
+++ b/helm-values/kube-prometheus-stack.yaml
@@ -44,6 +44,7 @@ grafana:
     username: '${SMTP_USERNAME}'
     password: '${SMTP_PASSWORD}'
     from_address: '${SMTP_FROM}'
+    skip_verify: ${SMTP_REQUIRE_TLS}
   persistence:
     enabled: true
     accessModes: ['ReadWriteOnce']
