--- a/helm-values/kube-prometheus-stack/v1/values.yaml
+++ b/helm-values/kube-prometheus-stack/v1/values.yaml
@@ -29,7 +29,7 @@ alertmanager:
           continue: true
           receiver: slack-notifications
         - match:
-            severity: warning
+            severity: critical
           receiver: email-notifications
     receivers:
       - name: 'email-notifications'
