kubernetes: notification using kube-prometheus-stack

--- a/kubernetes/foo-system/N-bytes-data-in-memory.yaml
+++ b/kubernetes/foo-system/N-bytes-data-in-memory.yaml
@@ -18,5 +18,5 @@ spec:
       command: [ "sh", "-c" ]
       args:
         - |-
-          python -c "print('x' * $N_DATA)"
+          python -c "print('x' * $N_BYTES)"
           python "app.py
