kubernetes: notification using kube-prometheus-stack

--- a/kubernetes/foo-system/N-bytes-data-in-memory.yaml
+++ b/kubernetes/foo-system/N-bytes-data-in-memory.yaml
@@ -20,3 +20,8 @@ spec:
         - |-
           python -c "print('x' * $N_BYTES)"
           python "app.py"
+      resources:
+        requests:
+          memory: "30Mi"
+        limits:
+          memory: "50Mi"
