--- a/kubernetes/foo-system/N-bytes-data-in-memory.yaml
+++ b/kubernetes/foo-system/N-bytes-data-in-memory.yaml
@@ -22,6 +22,8 @@ spec:
           python "app.py"
       resources:
         requests:
-          memory: "30Mi"
+          memory: "20Mi"
+          cpu: "50m"
         limits:
           memory: "50Mi"
+          cpu: "100m"
