kubernetes: notification using kube-prometheus-stack

--- a/kubernetes/foo-system/N-bytes-data-in-memory.yaml
+++ b/kubernetes/foo-system/N-bytes-data-in-memory.yaml
@@ -18,7 +18,7 @@ spec:
       command: [ "sh", "-c" ]
       args:
         - |-
-          python -c "print('x' * $N_BYTES)"
+          python -c "print(['x' * $N_BYTES for x in range($N_TIMES)])"
           python "app.py"
       resources:
         requests:
