kubernetes: notification using kube-prometheus-stack

--- a/kubernetes/helm-values/kube-prometheus-stack/v1/values.yaml
+++ b/kubernetes/helm-values/kube-prometheus-stack/v1/values.yaml
@@ -41,7 +41,7 @@ alertmanager:
           continue: true
           receiver: "slack-notifications"
         - matchers:
-            - severity = "critical"
+            - severity = "warning|critical"
           receiver: "email-notifications"
     receivers:
       - name: "null"
