--- a/kubernetes/helm-values/kube-prometheus-stack/v1/values.yaml
+++ b/kubernetes/helm-values/kube-prometheus-stack/v1/values.yaml
@@ -130,7 +130,7 @@ grafana:
     smtp: # https://grafana.com/docs/grafana/next/setup-grafana/configure-grafana/#smtp
       enabled: true
       host: "${SMTP_HOSTNAME}:${SMTP_HOSTPORT}"
-      username: "${SMTP_USERNAME}"
+      user: "${SMTP_USERNAME}"
       password: "${SMTP_PASSWORD}"
       from_address: "${SMTP_FROM}"
       skip_verify: ${SMTP_SKIP_SSL_VERIFY}
