--- a/kubernetes/notification-using-kube-prometheus-stack/values.yaml
+++ b/kubernetes/notification-using-kube-prometheus-stack/values.yaml
@@ -138,6 +138,15 @@ grafana:
     enabled: true
     accessModes: [ "ReadWriteOnce" ]
     size: 2Gi
+  additionalDataSources:
+    - name: Loki
+      type: loki
+      access: proxy
+      url: http://loki:3100
+      version: 1
+      isDefault: false
+      jsonData:
+        maxLines: 1000
 prometheusOperator:
   logLevel: "${LOG_LEVEL}"
   tls:
