post: logging-kubernetes-using-loki

--- a/kubernetes/notification-using-kube-prometheus-stack/deployment.yaml
+++ b/kubernetes/notification-using-kube-prometheus-stack/deployment.yaml
@@ -2,7 +2,7 @@
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: foo-deployment
+  name: notification-using-kube-prometheus-stack
 ---
 apiVersion: apps/v1
 kind: Deployment
