--- a/airflow-setup/values.yaml
+++ b/airflow-setup/values.yaml
@@ -19,7 +19,7 @@ airflow:
     AIRFLOW__SMTP__SMTP_SSL: "False"
     AIRFLOW__SMTP__SMTP_STARTTLS: "False"
 
-    AIRFLOW__WEBSERVER__BASE_URL: "https://airflow.$CLUSTER_FQDN"
+    AIRFLOW__WEBSERVER__BASE_URL: "http://airflow.$CLUSTER_FQDN"
     AIRFLOW__CELERY__FLOWER_URL_PREFIX: ""
 
     # enable rest endpoint
